--- a/packages/wp-player-mobile/package.json
+++ b/packages/wp-player-mobile/package.json
@@ -36,6 +36,7 @@
     "immutable": "^3.8.2",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-sound": "^0.10.4",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
