--- a/packages/wp-player-mobile/package.json
+++ b/packages/wp-player-mobile/package.json
@@ -16,23 +16,20 @@
     "prettier-eslint": "^8.2.1",
     "prettier-eslint-cli": "^4.4.0",
     "prop-types": "^15.6.0",
-    "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "buffer": "^5.0.8",
     "cheerio": "^1.0.0-rc.2",
-    "expo": "^21.0.0",
     "immutable": "^3.8.2",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
